# romshelf

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/romshelf-cli/: Cargo.toml  main.rs
crates/romshelf-core/: Cargo.toml
crates/romshelf-core/src/: lib.rs  tosec.rs
crates/romshelf-core/src/dat/: mod.rs
crates/romshelf-core/src/db/: mod.rs  schema.sql
crates/romshelf-core/src/scan/: mod.rs
crates/romshelf-core/src/services/: dat_importer.rs  mod.rs  progress.rs
crates/romshelf-core/src/verify/: mod.rs
src/: lib.rs  main.rs  tosec.rs
src/dat/: mod.rs
src/db/: mod.rs  schema.sql
src/scan/: mod.rs
src/verify/: mod.rs
ui/: package-lock.json  package.json
ui/src/: app.html
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs  main.rs
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/dats/: +page.svelte
ui/src/routes/files/: +page.svelte
