[workspace]
resolver = "2"
members = [
    "crates/romshelf-core",
    "crates/romshelf-cli",
    "ui/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Internal crates
romshelf-core = { path = "crates/romshelf-core" }

# CLI
clap = { version = "4", features = ["derive"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Hashing
crc32fast = "1.4"
md-5 = "0.10"
sha1 = "0.10"

# XML parsing
quick-xml = "0.37"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# File system
walkdir = "2.5"
zip = "2.2"
sevenz-rust = "0.6"
tempfile = "3"

# Parallelism
rayon = "1.10"
crossbeam-channel = "0.5"
num_cpus = "1.16"

# Misc
chrono = "0.4"
dirs = "5"
phf = { version = "0.13.1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
