[package]
name = "romshelf-cli"
description = "ROM collection manager - command-line interface"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "romshelf"
path = "main.rs"

[dependencies]
romshelf-core.workspace = true
clap.workspace = true
anyhow.workspace = true
walkdir.workspace = true
rusqlite.workspace = true
chrono.workspace = true
zip.workspace = true
dirs.workspace = true
num_cpus.workspace = true
tempfile.workspace = true
sevenz-rust.workspace = true
