[package]
name = "romshelf-core"
description = "ROM collection manager - core library"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "romshelf_core"
path = "src/lib.rs"

[dependencies]
# Database
rusqlite.workspace = true

# Hashing
crc32fast.workspace = true
md-5.workspace = true
sha1.workspace = true

# XML parsing
quick-xml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# File system
walkdir.workspace = true
zip.workspace = true
sevenz-rust.workspace = true
tempfile.workspace = true

# Parallelism
rayon.workspace = true
crossbeam-channel.workspace = true
num_cpus.workspace = true

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Misc
chrono.workspace = true
dirs.workspace = true
phf.workspace = true

[dev-dependencies]
tempfile.workspace = true
