[package]
name = "romshelf-gui"
description = "ROM collection manager - graphical interface"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "romshelf_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
romshelf-core.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num_cpus.workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
